--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,7 +2,7 @@
 
 body {
   width: 100%;
-  background-image: url("/images/bg-pattern-desktop.svg");
+  background-image: url("/base-apparel-coming-soon-page/images/bg-pattern-desktop.svg");
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -34,11 +34,11 @@ body {
       width: 100%;
       max-width: 40rem;
       height: 30rem;
-      background-image: url("/images/hero-mobile.jpg");
+      background-image: url("/base-apparel-coming-soon-page/images/hero-mobile.jpg");
       background-repeat: no-repeat;
       background-size: 100%;
       @media (min-width: 1024px) {
-        background-image: url("/images/hero-desktop.jpg");
+        background-image: url("/base-apparel-coming-soon-page/images/hero-desktop.jpg");
         height: 70rem;
         margin-top: 0;
       }
